syntax = "proto3";

package payment_service;

option go_package = "github.com/edulearn/payment_service/pb";

// Structured error message
message Error {
  string code = 1;                    // e.g., "RESOURCE_NOT_FOUND", "INVALID_ARGUMENT", "UNAUTHENTICATED"
  string message = 2;                 // Human-readable error message
  repeated ErrorDetail details = 3;   // Optional detailed error information
}

// Detailed error information
message ErrorDetail {
  string field = 1;                   // Field name that caused the error
  string message = 2;                 // Field-specific error message
}

// Money message to represent monetary values
message Money {
  int64 amount = 1; // Amount in the smallest unit (e.g., cents)
  string currency = 2; // ISO 4217 currency code (e.g., "USD")
}

// Request to process a payment
message CreatePaymentRequest {
  string user_id = 1;
  string order_id = 2;
  optional string success_url = 7;
  optional string cancel_url = 8;
  Money amount = 3;
  string payment_gateway = 4; // e.g., "stripe", "paypal"
  string idempotency_key = 5; // For ensuring idempotency
}
// Request to process a payment capture
message CapturePaymentRequest {
  string user_id = 1;
  string payment_id = 3;
  string provider_order_id = 2;
}
// Response to process a payment capture
message CapturePaymentSuccess {
  string transaction_id = 1;
  string payment_id = 5;
  string status = 2;
  map<string, string> metadata = 3;
}
message RazorpayVerifyPaymentRequest {
  string razorpay_payment_id = 1;
  string payment_id = 5;
  string razorpay_order_id = 2;
  string razorpay_signature = 3;
}
// Response to process a payment verify
message RazorpayVerifyPaymentSuccess {
  string payment_id = 5;
  string transaction_id = 1;
  string status = 2;
  map<string, string> metadata = 3;
}

// Success message for payment process
message StripeCreateSuccess {
  string payment_id = 1;
  string user_id = 2;
  string order_id = 3;
  string client_secret = 7;
  Money amount = 4;
  string status = 5; // e.g., "SUCCESS", "PENDING", "FAILED"
  string transaction_id = 6; // Gateway-specific transaction ID
}
message RazorpayCreateSuccess {
  string payment_id = 1;
  string user_id = 2;
  string order_id = 3;
  string provider_order_id = 7;
  Money amount = 4;
  string status = 5; // e.g., "SUCCESS", "PENDING", "FAILED"
  string key_id = 6; // Gateway-specific transaction ID
}
message PayPalCreateSuccess {
  string payment_id = 1;
  string user_id = 2;
  string order_id = 3;
  string provider_order_id = 7;
  Money amount = 4;
  string status = 5; // e.g., "SUCCESS", "PENDING", "FAILED"
  string approval_url  = 6; // Gateway-specific transaction ID
}

// Response for a payment process
message CreatePaymentResponse {
  oneof result {
    CreatePaymentSuccess success = 1;
    Error error = 2;
  }
}
message CreatePaymentSuccess {
  oneof result {
    StripeCreateSuccess stripe = 1;
    RazorpayCreateSuccess razorpay = 2;
    PayPalCreateSuccess paypal = 3;
  }
}

// Request to process a refund
message ProcessRefundRequest {
  string payment_id = 1;
  string user_id = 2;
  Money amount = 3;
  string reason = 4;
  string idempotency_key = 5;
}

// Success message for refund process
message ProcessRefundSuccess {
  string refund_id = 1;
  string payment_id = 2;
  string user_id = 3;
  Money amount = 4;
  string status = 5; // e.g., "SUCCESS", "PENDING", "FAILED"
  string transaction_id = 6; // Gateway-specific transaction ID
}

// Response for a refund process
message ProcessRefundResponse {
  oneof result {
    ProcessRefundSuccess success = 1;
    Error error = 2;
  }
}
message CapturePaymentResponse {
  oneof result {
    CapturePaymentSuccess success = 1;
    Error error = 2;
  }
}
message RazorpayVerifyResponse {
  oneof result {
    RazorpayVerifyPaymentSuccess success = 1;
    Error error = 2;
  }
}

// Health check request (for monitoring)
message HealthCheckRequest {}

// Health check response
message HealthCheckResponse {
  string status = 1; // e.g., "HEALTHY", "UNHEALTHY"
}

// Payment Service definition
service PaymentService {
  // Process a payment for an order
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {}

  rpc PayPalPaymentCapture(CapturePaymentRequest) returns (CapturePaymentResponse) {}

  rpc RazorpayVerifyPayment(RazorpayVerifyPaymentRequest) returns (RazorpayVerifyResponse) {}
  
  // Process a refund for a payment
  rpc ProcessRefund(ProcessRefundRequest) returns (ProcessRefundResponse) {}

  // Health check endpoint
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {}
}